2009-04-26  Bernhard Walle <bernhard.walle@gmx.de>

	* Port to Qt4

2008-07-13  Bernhard Walle <bernhard.walle@gmx.de>

	* don't show when the measuring starts (so revert the change from
	  2008-07-06) because then samples are lost because that takes too
	  much time

2008-07-12  Bernhard Walle <bernhard.walle@gmx.de>

	* implement own polling function for Parport::waitData() because
	  the libieee1284-provided polling uses a sleep() between polling,
	  so the triggering is less accurate as it could be

2008-07-06  Bernhard Walle <bernhard.walle@gmx.de>

	* show when measuring starts after triggering
	* change timeout of Parport::waitData() to 1 sec
	* accept NULL as timeout in Parport::waitData()
	* bump version to 0.1.4 (don't release)

2008-07-02  Bernhard Walle <bernhard.walle@gmx.de>

	* check if the parallel port is TRISTATE capable (after debugging two
	  days why the schematics does not work ...)

2008-01-06  Bernhard Walle <bernhard.walle@gmx.de>

	* triggering is enabled when the mask is not 0x00 and not when it is not
	  0xff as previously implemented
	  [discovered by Helmut Jakob]

2008-02-03  Bernhard Walle <bernhard.walle@gmx.de>

	* fix wrong "Stop" label (accidentally named was "Start")
	  [reported by Dr.-Ing. A. Irmer]

2007-12-15  Bernhard Walle <bernhard.walle@gmx.de>

	* fix build for gcc 4.3

2007-09-21  Bernhard Walle <bernhard.walle@gmx.de>

	* adapt documentation to udev and add the links to the openSUSE
	  BuildService

2007-09-18  Bernhard Walle <bernhard.walle@gmx.de>

	* implemented saving only the changed positions (suggested by Philippe
	  Langlois)

2007-09-17  Bernhard Walle <bernhard.walle@gmx.de>

	* implemented CSV export option (suggested by Philippe Langlois)

2005-06-29  Bernhard Walle <bernhard.walle@gmx.de>

	* Added Windows documentation (thanks to Stefan Holzer)
	* Released 0.1.2.

2005-06-18  Bernhard Walle <bernhard.walle@gmx.de>

	* make ParportList a singleton object, so ieee1284_find_ports